...
        <item quantity="other">%d canciones</item>
    </plurals>
    <string name="album_create_button_text">Crear</string>
    <string name="album_created_success">Álbum creado exitosamente</string>
    <string name="artist_no_albums">Este artista no tiene álbumes</string>
    <string name="associate_button">ASOCIAR</string>
    <string name="associate_track_title">Asociar canción</string>
    <string name="associate_tracks_fab_desc">Asociar tracks</string>
    <string name="btn_create">CREAR</string>
    <string name="cancel_button">CANCELAR</string>
    <string name="favorite_albums">Álbumes\nfavoritos</string>
    <string name="favorite_artists">Artistas\nfavoritos</string>
    <string name="hint_album_name">Nombre del álbum</string>
...
    <string name="label_description">DESCRIPCIÓN</string>
    <string name="label_genre">GÉNERO</string>
    <string name="label_name">NOMBRE</string>
    <string name="label_record_label">SELLO DISCOGRÁFICO</string>
    <string name="label_release_date">FECHA DE LANZAMIENTO</string>
    <string name="min_label">MIN</string>
    <string name="minutes_placeholder">mm</string>
    <string name="search_album">Buscar álbum</string>
    <string name="seconds_placeholder">ss</string>
    <string name="seg_label">SEG</string>
    <string name="track_duration_label">DURACIÓN</string>
    <string name="track_name_label">NOMBRE</string>
    <string name="track_name_placeholder">Nombre de la canción</string>
    <string name="track_number">%s</string>
    <string name="tracklist">Tracklist</string>
    <string name="trophy_description">ícono de trofeo</string>
    <string name="duration_separator">:</string>
    <string name="title_albums">Álbumes</string>
    <string name="subtitle_albums">Explora colecciones</string>
...
