...
                            android:text="@string/tracklist"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTrackCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="17sp"
                            android:layout_marginEnd="12dp" />

                        <ImageButton
                            android:id="@+id/btnAssociateTracks"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/bg_associate_button"
                            android:contentDescription="@string/associate_tracks_fab_desc"
                            android:scaleType="centerInside"
                            android:src="@android:drawable/ic_input_add"
...
